# Bot-Apex

./: .env.example  .gitignore  APIS.md  ARCHITECTURE.md  MARKETS.md  PHASE1.md  PLANNING.md  Procfile  README.md  STRUCTURE.md  WHATSAPP_SETUP.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: c4638f493d35_initial_schema.py
scripts/: bootstrap.py
src/: bot.py
src/core/: config.py  database.py  logging.py
src/data/fetchers/: football.py  odds.py
src/data/models/: __init__.py  match.py  prediction.py
src/messaging/: formatters.py  telegram.py  whatsapp.py
src/models/: dixon_coles.py
src/models/markets/: asian_handicap.py  btts.py  double_chance.py  result.py  totals.py
src/scheduler/: jobs.py  pipeline.py
src/selection/: kelly.py  selector.py  value_calculator.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_dixon_coles.py  test_fetchers.py  test_kelly.py  test_markets.py  test_messaging.py  test_models.py  test_value_calculator.py
