[project]
name = "apex-bot-v2"
version = "0.1.0"
description = "Bot de prédiction sportive avec value betting automatisé"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10,<4.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
apex-pipeline = "src.scheduler.pipeline:main"
apex-bootstrap = "scripts.bootstrap:main"
apex-backtest = "scripts.backtest:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ─── Black ───────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (géré par black)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
